name:                geb
version:             0.1.0.0
synopsis:            A web app to store movie scripts
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Georges Dubus
maintainer:          georges.dubus@compiletoi.net
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Geb.Web
                     , Geb.Store
                     , Geb.Store.Raw
                     , Geb.Store.Script
                     , Geb.Subtitles
  other-modules:       Geb.Utils
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , exceptions
                     , filepath
                     , filestore
                     , mtl
                     , text
                     , transformers
                     , yesod
                     , blaze-html
                     , attoparsec
                     , subtitleParser
                     , either
                     , classy-prelude
  default-language:    Haskell2010
                     
executable geb
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , geb
  default-language:    Haskell2010

test-suite geb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , geb
                     , tasty
                     , tasty-hunit
                     , temporary
                     , directory
                     , filepath
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/madjar/geb
